--- a/index.html
+++ b/index.html
@@ -59,6 +59,22 @@
             background-color: #d4d4d488; /* Light gray background */
             padding: 30px 0;
         }
+        .map-container {
+            position: relative;
+            padding-bottom: 56.25%; /* 16:9 Aspect Ratio */
+            height: 0;
+            overflow: hidden;
+            max-width: 100%;
+            background: #eee;
+            margin-top: 20px;
+        }
+        .map-container iframe {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+        }
     </style>
 </head>
 <body>
@@ -178,6 +194,10 @@
         <a href="mailto:jayamerdeka149@gmail.com" class="d-block">
             <i class="fas fa-envelope"></i> Email
         </a>
+    </div>
+    <!-- Map Container -->
+    <div class="map-container">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3944.9474253942034!2d115.2111859!3d-8.5126607!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2dd23c94bff84e95%3A0x6b4f236c2695e4a1!2sWarung%20Jaya%20Merdeka!5e0!3m2!1sen!2sid!4v1694320923347!5m2!1sen!2sid" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
     </div>
 </div>
 
